--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
-title: Prabhjas's Homepage
-description: Bookmark this to keep an eye on my project updates!
+remote_theme: pages-themes/merlot@v0.2.0
+plugins:
+  - jekyll-remote-theme
