--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,7 @@
-remote_theme: pages-themes/merlot@v0.2.0
+theme: jekyll-theme-cayman
+title: "My DSC 80 Project"
+description: "Analysis of ..."
+
+remote_theme: mmistakes/minimal-mistakes
 plugins:
-  - jekyll-remote-theme
+  - jekyll-include-cache
